--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/main.css">
-
     <title> LOCAL GENESIS PROJECT</title>
-
 </head>
 <body>
+
+    <p>Hello world</p>
 
     <h1>Hello</h1>
     <h2>Hello</h2>
